--- a/site.css
+++ b/site.css
@@ -1,3 +1,6 @@
+/*
+  Assignment 1.3 
+*/
 body {
     font-family: 'Oswald', Verdana, Arial, sans-serif;
 }
@@ -18,15 +21,16 @@ h4 {
     padding: 10px;
 }
 
-a{
+a {
     color: #453674;
     text-decoration: none;
 }
 
-a:hover{
+a:hover {
     background-color: #D6A800;
     color: #4F3674;
 }
-a:visited{
+
+a:visited {
     color: #3C275A;
 }
