--- a/week-4/ahmedin-number-game.css
+++ b/week-4/ahmedin-number-game.css
@@ -1,12 +1,12 @@
 /*
 ============================================
-; Title:  Assignment 3 – Temperature Conversion App
+; Title:  Assignment 3 – Number Guessing Game App
 ; Author: Professor Krasso
-; Date:   03 November 2022
+; Date:   13 November 2022
 ; Modified By: Yakut Ahmedin
-; Description: Assignment 3 – Temperature Conversion App 
-            Weekly Assignments 3 word document!!
-            Fahrenheit to Celsuis Converter!!
+; Description: The following program contains the source code for a Number Guessing Game App. For the player put randome number from 1 up to 10 to guss the number. It checks if the number macth the hidden number. 
+            Weekly Assignments 4 word document!!
+            Number Guessing Game!!
 ;===========================================
 */
 
@@ -25,7 +25,7 @@ h1 {
     margin-left: 100px;
     padding: 10px;
 }
-
+/* card element style start here */
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
@@ -47,6 +47,7 @@ h1 {
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
+/* form field syles start here */
 .form{
     display: inline-grid;
     grid-template-columns: auto;
@@ -73,6 +74,7 @@ h1 {
     border-radius: 4px;
     box-sizing: border-box;
 }
+/* submit buttun styles */
 .btn-primary {
     background-color: #4F3674;
     color: white;
@@ -91,7 +93,7 @@ h1 {
     font-size: 28px;
     text-align: center;
 }
-
+/*  footer style started here */
 footer a {
     color: #453674;
     text-decoration: none;
@@ -105,7 +107,7 @@ footer a:hover {
 footer a:visited {
     color: #3C275A;
 }
-
+/* result text-styles */
 #reseltMessage{
     text-align: center;
     font-size: 28px;
