--- a/week-9/ahmedin-card-game.css
+++ b/week-9/ahmedin-card-game.css
@@ -1,13 +1,13 @@
 /*
 ============================================
-; Title:  Assignment 8 – alphabet-game
+; Title:  Assignment 9 – card-game
 ; Author: Professor Krasso
-; Date:   11 December 2022
+; Date:   13 December 2022
 ; Modified By: Yakut Ahmedin
-; Description: The following program contains the source code for a Assignment 8 – alphabet-game. 
-            Assignment 8 – alphabet-game!!
-            alphabet-game!!
-;============================================
+; Description: The following program contains the source code for a Assignment 9  card-game. 
+            Assignment 9 – card-game!!
+            card-game!!
+;===========================================
 */
 
 body {
@@ -25,6 +25,7 @@ h1 {
     margin-left: 100px;
     padding: 10px;
 }
+
 /* card element style start here */
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -47,14 +48,17 @@ h1 {
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
+
 /* form field syles start here */
-.form{
+.form {
     display: inline-grid;
     grid-template-columns: auto;
 }
-.form-field{
+
+.form-field {
     padding: 20px;
 }
+
 .btn {
     border: none;
     text-align: center;
@@ -66,6 +70,7 @@ h1 {
     padding: 15px 32px;
     color: black;
 }
+
 .input {
     padding: 12px 20px;
     margin: 8px 0;
@@ -74,6 +79,7 @@ h1 {
     border-radius: 4px;
     box-sizing: border-box;
 }
+
 /* submit buttun styles */
 .btn-primary {
     background-color: #4F3674;
@@ -89,10 +95,11 @@ h1 {
     width: 100%;
 }
 
-#convertedValue{
+#convertedValue {
     font-size: 28px;
     text-align: center;
 }
+
 /*  footer style started here */
 footer a {
     color: #453674;
@@ -107,23 +114,44 @@ footer a:hover {
 footer a:visited {
     color: #3C275A;
 }
+
+.app-header {
+ text-align: center;
+}
 /* result text-styles */
-#fibonacciSequenceText{
+#fibonacciSequenceText {
     text-align: center;
     font-size: 28px;
 }
 
-#alphabetLetters, #alphabetOutput{
+#alphabetLetters,
+#alphabetOutput {
     text-align: center;
     font-size: 24px;
 }
 
+/* CSS style of player-card */
+.player-card {
+    text-align: center;
+}
+
+#player-card-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 10px;
+    gap: 10px;
+}
+.card .player-card{
+    width: 100%;
+    height: 120px;
+}
 /* media to input card element */
-@media(max-width: 768px ) {
+@media(max-width: 768px) {
     #container {
         margin: 5vmin;
     }
-    .card{
+
+    .card {
         width: 100%;
     }
 }
