--- a/week-9/ahmedin-card-game.css
+++ b/week-9/ahmedin-card-game.css
@@ -131,11 +131,8 @@ footer a:visited {
 }
 
 /* CSS style of player-card */
-.player-card {
-    text-align: center;
-}
-
 #player-card-container{
+    width: 96%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     padding: 10px;
@@ -144,9 +141,13 @@ footer a:visited {
 .card .player-card{
     width: 100%;
     height: 120px;
+    text-align: center;
+}
+.player-card .material-symbols-outlined {
+    scale: 1.5;
 }
 /* media to input card element */
-@media(max-width: 768px) {
+@media(max-width: 992px) {
     #container {
         margin: 5vmin;
     }
