--- a/week-9/ahmedin-card-game.css
+++ b/week-9/ahmedin-card-game.css
@@ -24,6 +24,9 @@ h1 {
     margin-right: 100px;
     margin-left: 100px;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* card element style start here */
@@ -101,9 +104,15 @@ h1 {
 }
 
 /*  footer style started here */
+footer{
+    width: 50%;
+    text-align: left;
+}
 footer a {
+    width: 100%;
     color: #453674;
     text-decoration: none;
+    text-align: left;
 }
 
 footer a:hover {
@@ -132,7 +141,7 @@ footer a:visited {
 
 /* CSS style of player-card */
 #player-card-container{
-    width: 96%;
+    width: 97%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     padding: 10px;
@@ -141,11 +150,10 @@ footer a:visited {
 .card .player-card{
     width: 100%;
     height: 120px;
+    margin: 0px!important;
     text-align: center;
 }
-.card-content span {
-    scale: 2.5;
-}
+
 /* media to input card element */
 @media(max-width: 992px) {
     #container {
@@ -153,6 +161,9 @@ footer a:visited {
     }
 
     .card {
+        width: 100%;
+    }
+    footer{
         width: 100%;
     }
 }
