--- a/week-9/ahmedin-card-game.css
+++ b/week-9/ahmedin-card-game.css
@@ -24,9 +24,6 @@ h1 {
     margin-right: 100px;
     margin-left: 100px;
     padding: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 /* card element style start here */
@@ -104,10 +101,6 @@ h1 {
 }
 
 /*  footer style started here */
-footer{
-    width: 50%;
-    text-align: left;
-}
 footer a {
     width: 100%;
     color: #453674;
@@ -125,8 +118,10 @@ footer a:visited {
 }
 
 .app-header {
- text-align: center;
+    width: 50%;
+    text-align: center;
 }
+
 /* result text-styles */
 #fibonacciSequenceText {
     text-align: center;
@@ -140,17 +135,18 @@ footer a:visited {
 }
 
 /* CSS style of player-card */
-#player-card-container{
+#player-card-container {
     width: 97%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     padding: 10px;
     gap: 10px;
 }
-.card .player-card{
+
+.card .player-card {
     width: 100%;
     height: 120px;
-    margin: 0px!important;
+    margin: 0px !important;
     text-align: center;
 }
 
@@ -163,7 +159,8 @@ footer a:visited {
     .card {
         width: 100%;
     }
-    footer{
+
+    .app-header {
         width: 100%;
     }
 }
